src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>PwBH_Sold__c</fullName>
        <label>PwBH Sold</label>
        <summarizedField>Opportunity.Livongo_Behavioral_Health_PwBHs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PwDPP_Sold__c</fullName>
        <label>PwDPP Sold</label>
        <summarizedField>Opportunity.Livongo_DPP_PwPDs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PwH_Sold__c</fullName>
        <label>PwH Sold</label>
        <summarizedField>Opportunity.Livongo_for_Hypertension_PwHs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PwO_Sold__c</fullName>
        <label>PwO Sold</label>
        <summarizedField>Opportunity.Livongo_for_Weight_Management_DP_PwOs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PwWM_DPP_Sold__c</fullName>
        <label>PwWM+DPP Sold</label>
        <summarizedField>Opportunity.Livongo_for_Weight_Management_DP_PwOs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PwWM_Sold__c</fullName>
        <label>PwWM Sold</label>
        <summarizedField>Opportunity.Livongo_WM_PwWMs__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RPwDs_from_Claims_Data__c</fullName>
        <label>RPwDs from Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPwHs_from_Claims__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>RPwHs from Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reduction_in_A1c_Actual__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Reduction in A1c - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reference_Account__c</fullName>
        <description>Marketing</description>
        <label>Client willing to serve as reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestCIM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox, when checked, will create a task assigned to Client Implementation Director for purposes of assigning a CIM to this Account.</description>
        <inlineHelpText>Checkbox, when checked, will create a task assigned to Client Implementation Director for purposes of assigning a CIM to this Account.</inlineHelpText>
        <label>Request CIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestCSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox, when checked, will create a task assigned to Client Success Director for purposes of assigning a CSM to this Account.</description>
        <inlineHelpText>Checkbox, when checked, will create a task assigned to Client Success Director for purposes of assigning a CSM to this Account.</inlineHelpText>
        <label>Request CSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Color__c</fullName>
        <label>Risk Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Black - Leaving Livongo</fullName>
                    <color>#000000</color>
                    <label>Black - Leaving Livongo</label>
                </value>
                <value>
                    <fullName>Green - Retaining the Client</fullName>
                    <color>#33FF33</color>
                    <label>Green - Retaining the Client</label>
                </value>
                <value>
                    <fullName>Yellow - Intent Expressed</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow - Intent Expressed</label>
                </value>
                <value>
                    <fullName>Red - No Clear Intent Expressed</fullName>
                    <color>#FF0000</color>
                    <label>Red - No Clear Intent Expressed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Description__c</fullName>
        <label>Risk Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Risk_Color__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unhappy client - Terming and we have tried literally everything</fullName>
                </value>
                <value>
                    <fullName>Acquired and no path forward with new parent company</fullName>
                </value>
                <value>
                    <fullName>Renewal CCS Received (5/1/2020 or later) for TDC</fullName>
                </value>
                <value>
                    <fullName>Contracted directly and signed</fullName>
                </value>
                <value>
                    <fullName>Redlines in progress and full intent from client to renew direct</fullName>
                </value>
                <value>
                    <fullName>Redlines in progress and full intent from client to renew through other partner</fullName>
                </value>
                <value>
                    <fullName>Intent to go direct and not renew</fullName>
                </value>
                <value>
                    <fullName>Intent to contract through other partner and not renew</fullName>
                </value>
                <value>
                    <fullName>Intent to move to ngTDC</fullName>
                </value>
                <value>
                    <fullName>Intent to renew on TDC paper &amp; evaluate alternative contracting paths to stay with Livongo for 2022 and beyond and CAN contract direct - no paperwork received yet</fullName>
                </value>
                <value>
                    <fullName>Intent to renew on TDC paper &amp; evaluate alternative contracting paths to stay with Livongo for 2022 and beyond and CANNOT contract direct - no paperwork received yet</fullName>
                </value>
                <value>
                    <fullName>Intent to renew on TDC paper &amp; no other intent stated and have not received paperwork yet</fullName>
                </value>
                <value>
                    <fullName>No discussions with client or consultant after multiple outreaches</fullName>
                </value>
                <value>
                    <fullName>Recent launch/renewal, no commitment to renew</fullName>
                </value>
                <value>
                    <fullName>Spoke with client and they are not happy with Livongo</fullName>
                </value>
                <value>
                    <fullName>Conversation had but no clear intent - Met with client / consultant and discussed contracting path options but no commitment yet</fullName>
                </value>
                <value>
                    <fullName>Conversation had but no clear intent - Met with AE and they verbally said they will not be pushing ngTDC to the client right now</fullName>
                </value>
                <value>
                    <fullName>Conversation had but no clear intent - Met with Client/AE/Consultant  and discussed changes and were interested in making changes to direct or partner but did not commit yet</fullName>
                </value>
                <value>
                    <fullName>Out to RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPS_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPS Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPS_ProgramManager_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_P_500__c</fullName>
        <externalId>true</externalId>
        <label>S&amp;P 500</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Savings_PPPM_ROI_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Updated by Client Success. If you see a problem, please contact the Account&apos;s CSM.</inlineHelpText>
        <label>Savings PPPM (ROI) - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_or_Multi_Program2__c</fullName>
        <label>Single or Multi Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Program</fullName>
                </value>
                <value>
                    <fullName>Multi Program</fullName>
                </value>
                <value>
                    <fullName>Whole Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1323</description>
        <label>Split Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomerOnboardingScore__c</fullName>
        <description>A calculated customer onboarding score based on a TaskRay Project related to this Account. Based on a project&apos;s Initial Estimated Duration vs. Actual Duration and the average of Internal &amp; External Sentiment.</description>
        <inlineHelpText>This field stores a calculated customer onboarding score based on a TaskRay Project related to this Account.</inlineHelpText>
        <label>Customer Onboarding Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
        <description>A customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on TaskRay Project.</description>
        <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s). Can be populated from the Desired Outcomes field on TaskRay Project.</inlineHelpText>
        <label>Desired Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingDuration__c</fullName>
        <formula>IF(
OR(
ISBLANK( TASKRAY__trOnboardingStartDate__c ),
ISBLANK( TASKRAY__trOnboardingEndDate__c )
), 
NULL,
TASKRAY__trOnboardingEndDate__c - TASKRAY__trOnboardingStartDate__c)</formula>
        <label>Onboarding Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingEndDate__c</fullName>
        <description>Used by TaskRay to record the actual end date of the onboarding project associated with this account.</description>
        <inlineHelpText>Used by TaskRay to record the actual end date of the onboarding project associated with this account.</inlineHelpText>
        <label>Onboarding End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingStartDate__c</fullName>
        <description>Used by TaskRay to record the actual start date of the onboarding project associated with this account.</description>
        <inlineHelpText>Used by TaskRay to record the actual start date of the onboarding project associated with this account.</inlineHelpText>
        <label>Onboarding Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_payer_close_date__c</fullName>
        <label>MSA Target Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Forecast_Date__c</fullName>
        <description>Created as part of JENGA-1268</description>
        <label>Termination Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Rationale_Summary__c</fullName>
        <description>Jenga # 1393</description>
        <label>Termination Rationale Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial drivers / Cost</fullName>
                </value>
                <value>
                    <fullName>Lost crucial sponsor</fullName>
                </value>
                <value>
                    <fullName>Lost through contracting partner</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Never sold</fullName>
                </value>
                <value>
                    <fullName>Offering didn’t meet needs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physician buy-in</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
                <value>
                    <fullName>Vendor Consolidation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Closed_Lost_Opps__c</fullName>
        <label>Total Closed Lost Opps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Closed_No_Decision_Opps__c</fullName>
        <label>Total Closed No Decision Opps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed No Decision</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Open_Opportunities__c</fullName>
        <label>Total Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Count__c</fullName>
        <label>Total Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Products__c</fullName>
        <label>Total Primary Products</label>
        <summarizedField>Opportunity.Total_Primary_Products__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Won_Opportunities__c</fullName>
        <label>Total Won Opportunities (Non-Renewals)</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_of_Incentive_to_Exclude_SPA__c</fullName>
        <label>Type of Incentive to Exclude - SPA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visa GC</fullName>
                </value>
                <value>
                    <fullName>Amazon GC</fullName>
                </value>
                <value>
                    <fullName>Food Products</fullName>
                </value>
                <value>
                    <fullName>Activity Trackers</fullName>
                </value>
                <value>
                    <fullName>Hospitality Incentives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Union_Population__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Union Population</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_Last_30_day_Diabetes__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Usage % Last 30 day (Diabetes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Usage_Last_30_day_HTN__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Usage % Last 30 day (HTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Usage_Last_90_day_Diabetes__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Usage % Last 90 day (Diabetes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Usage_Last_90_day_HTN__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Usage % Last 90 day (HTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Use_for_Activation_Usage_SPA__c</fullName>
        <label>Use for Activation/Usage? - SPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado_test_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>copado test checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dba__c</fullName>
        <description>Doing business as</description>
        <inlineHelpText>If the client uses an acronym or a legal name that differs that what appears in the Account Name field, please indicate here to make it easier to search. This can be as simple as spelling out of an acronym or the known as name for a company.</inlineHelpText>
        <label>Doing business as</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS( TEXT(AccountSource) , &quot;Data.com&quot;),CONTAINS( TEXT(AccountSource) , &quot;Jigsaw&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdc_closedate__c</fullName>
        <description>The date that the Neuralytics model was last run to re-evaluate the quality of the lead, and the score updated.</description>
        <label>Playbooks Account Close Score Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isdc_closescore__c</fullName>
        <description>A number between 1 and 100, ranking the quality of the account record in relation to all other records in the SFDC org, predicting which record is most likely to close.</description>
        <label>Playbooks Account Close Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdc_closescoregrade__c</fullName>
        <label>Playbooks Account Close Score Grade</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myStrengthAcctExtId__c</fullName>
        <description>my Strength External Id</description>
        <externalId>true</externalId>
        <label>myStrengthAcctExtId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myStrength_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>myStrength Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>myStrength_Indicator__c</fullName>
        <description>DELETE ME per JENGA 1528</description>
        <formula>IF( myStrength_Account__c = TRUE,

IMAGE(&quot;https://livongohealth2ndorg--c.na63.content.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680f000004xXmW&amp;operationContext=CHATTER&amp;contentId=05T0f00000EvJrT&quot;, &quot;True&quot;, 78, 300)
, &quot;None&quot;
)</formula>
        <inlineHelpText>DELETE ME per JENGA 1528</inlineHelpText>
        <label>myStrength Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myStrength_Partner__c</fullName>
        <label>myStrength Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AcademicBlue</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Cambia</fullName>
                </value>
                <value>
                    <fullName>Castlight</fullName>
                </value>
                <value>
                    <fullName>ComPsych</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Kaiser Permanente</fullName>
                </value>
                <value>
                    <fullName>Lyra</fullName>
                </value>
                <value>
                    <fullName>Magellan</fullName>
                </value>
                <value>
                    <fullName>MedCost</fullName>
                </value>
                <value>
                    <fullName>New Directions</fullName>
                </value>
                <value>
                    <fullName>Resources For Living</fullName>
                </value>
                <value>
                    <fullName>This account is a Partner</fullName>
                </value>
                <value>
                    <fullName>SnapClarity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Account_Balance__c</fullName>
        <description>Celigo SF-NS Connector: Account balance from NetSuite Cusotmer</description>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Account_Overdue_Balance__c</fullName>
        <description>Celigo SF-NS Connector: Account overdue balance from NetSuite customer.</description>
        <label>Overdue Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Channel_Tier__c</fullName>
        <label>Channel Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Credit_Hold__c</fullName>
        <label>Credit Hold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                    <label>Auto</label>
                </value>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Days_Overdue__c</fullName>
        <description>Celigo SF-NS Connector: Days Overdue from NetSuite customer.</description>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <description>Celigo SF-NS Connector: Internal Id of NetSuite customer record.</description>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Sync_Err__c</fullName>
        <label>NetSuite Sync Error</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Push_To_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Pushed_From_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If &quot;Account sync only with opportunity setting is on&quot; then this flag will let account trigger know whether account sync has started from opportunity or from other source.</description>
        <label>Pushed From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Unbilled_Orders__c</fullName>
        <label>Unbilled Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Enrolled_RPwDs_to_date__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label># of Enrolled RPwDs to date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Enrolled_RPwHs_to_Date__c</fullName>
        <description>Count of enrolled recruitable people with hypertension for the account to-date</description>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label># of Enrolled RPwHs to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Open_Opportunities__c</fullName>
        <description>Used by channel marketing to get an understanding of the number of opportunities associated with the account.</description>
        <inlineHelpText>Used by channel marketing to get an understanding of the number of opportunities associated with the account.</inlineHelpText>
        <label># of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, Closed No Decision</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Retirees__c</fullName>
        <label># of Retirees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
</CustomObject>